Fix toggle alignment

--- a/src/components/toggle.module.css
+++ b/src/components/toggle.module.css
@@ -4,6 +4,7 @@
   cursor: pointer;
   display: block;
   height: 20px;
+  margin-right: -15px;
   outline: none;
   padding: 0;
   position: relative;
